ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-sni
  namespace: conduktor
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gateway.k8s.orb.local
        - "*.gateway.k8s.orb.local"
  rules:
    - host: gateway.k8s.orb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-external
                port: 
                  number: 9092
    - host: "*.gateway.k8s.orb.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-external
                port: 
                  number: 9092
